--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse-996704659\testng-customsuite.xml</span>
+                    <span>C:\Users\Admin\AppData\Local\Temp\testng-eclipse-938501877\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook">addBook</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook(qwer, 437)">addBook(qwer, 437)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook(zxcv, 947)">addBook(zxcv, 947)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="files.DynamicJson" class="method navigator-link" hash-for-method="addBook(poi, 838)">addBook(poi, 838)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +136,26 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="addBook">
-                  </a> <!-- addBook -->
+                  <a name="addBook(qwer, 437)">
+                  </a> <!-- addBook(qwer, 437) -->
                   <span class="method-name">addBook</span>
+                  <span class="parameters">(qwer,437)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addBook(zxcv, 947)">
+                  </a> <!-- addBook(zxcv, 947) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(zxcv,947)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="addBook(poi, 838)">
+                  </a> <!-- addBook(poi, 838) -->
+                  <span class="method-name">addBook</span>
+                  <span class="parameters">(poi,838)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse-996704659\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Admin\AppData\Local\Temp\testng-eclipse-938501877\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,16 +212,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addBook')
 data.setCell(0, 2, 'files.DynamicJson')
-data.setCell(0, 3, 5163);
+data.setCell(0, 3, 4132);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'addBook')
+data.setCell(1, 2, 'files.DynamicJson')
+data.setCell(1, 3, 214);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'addBook')
+data.setCell(2, 2, 'files.DynamicJson')
+data.setCell(2, 3, 207);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -222,8 +257,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">files.DynamicJson</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">addBook</span>
+                <span class="method-name">addBook(qwer, 437)</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addBook(zxcv, 947)</span>
+                <span class="method-start">4145 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">addBook(poi, 838)</span>
+                <span class="method-start">4370 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
